Updated css for create task child registration and task sheet

--- a/public/childRegistration.html
+++ b/public/childRegistration.html
@@ -9,6 +9,9 @@
   <link href="stylesheets/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,8 +48,8 @@
           </div>
           <div class="row bg-white borderSides">
             <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
-                <div class="card-header rounded-top bg-primary border-primary text-white">1. Add a child</div>
-                <div class="card-body text-black">
+                <div class="card-header rounded-top bg-primary border-primary text-white">Add a child</div>
+                <div class="card-body text-white">
                     <h5 class="card-title">First Name</h5>
                     <div class="input-group">
                         <input type="text" aria-label="First name" id="child-name" class="form-control">
