--- a/public/createTask.html
+++ b/public/createTask.html
@@ -9,6 +9,8 @@
   <link href="stylesheets/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -72,8 +74,8 @@
           </div>
       <div class="row bg-white borderSides">
         <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
-            <div class="card-header d-flex rounded-top text-white" id="grad" style="background-image: linear-gradient(angle, color-stop1, color-stop2);">Create a Task</div>
-                <div class="card-body text-black">
+            <div class="card-header d-flex rounded-top text-white">Create a Task</div>
+                <div class="card-body text-white">
                     <h5 class="card-title">Task Title*</h5>
                     <div class="input-group">
                         <input id="task-title" type="text" aria-label="Task Title" class="form-control">
