fixed viewTasks.handlebars and task partials

--- a/public/login.html
+++ b/public/login.html
@@ -67,7 +67,7 @@
                 </div>
                 <button type="submit" class="btn btn-danger float-end m-5">Sign Up</button>
               </form>
-              <p class="mt-5">Don't have an account? <a href="/login">Create an account</a></p>
+              <p class="mt-5">Don't have an account? <a href="/register">Create an account</a></p>
             </div>
           </div>
         </div>
