--- a/public/test.html
+++ b/public/test.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
 <head>
-  <title>Strive Up!</title>
+  <title>Strive Rite!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/83cb9d05bd.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
   <nav class="navbar navbar-light bg-white">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="./assets/images/Strive Rite.png" alt="Strive Rite Logo"width="150" class="height-auto">
       </a>
+      <a href="#">Sign Out</a>
     </div>
   </nav>
-  <div class="container mt-3">
-    <div class="row">
-      <div class="col-12 col-sm-12 col-md-9 bg-warning px-4 borderTopExtraLight">
+  
+  <div class="container page-todo mt-5">
+
+      <div class="col-sm-7 tasks">
         <nav class="navbar navbar-expand-lg navbar-light bg-warning">
           <div class="container-fluid">
             <div class="col-4 col-sm-4 col-md-4">
@@ -40,7 +40,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Tasks
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
@@ -49,7 +49,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Prizes
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
@@ -61,25 +61,35 @@
             </div>
           </div>
         </nav>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-sm-12 col-md-9 bg-warning px-4 borderExtraLight">
-        <div class="col-12 col-sm-12 col-md-12">
-          <div class="row bg-light borderTopSides" id="markup-container" style="border-bottom: 5px solid gold;">
-            <div class="col-12 col-sm-12 col-md-6 col-xl-4">
-              
-            </div>
+        <div class="page-todo ms-3">
+          <div class="tasks">
+              <div class="task-list overflow-auto">
+                  <h1>{{ name }}'s Tasks</h1>
+                  <div class="priority high"><span>high priority</span></div>
+                  {{#each highPriority}}
+                  {{> highTaskCard}}
+                  {{/each}}
+                  <br>
+                  <div class="priority medium"><span>medium priority</span></div>
+                  {{#each mediumPriority}}
+                  {{> mediumTaskCard}}
+                  {{/each}}
+                  <br>
+                  <div class="priority low"><span>low priority</span></div>
+                  {{#each lowPriority}}
+                  {{> lowTaskCard}}
+                  {{/each}}
+                  <div class="clearfix"></div>		
+              </div>		
           </div>
-          <div class="text-center my-1 col-12 col-sm-12 col-md-12">Terms & Conditions | Privacy Policy | Support</div>
-        </div>
+          </div>
       </div>
-    </div>
   </div>
-  
-</body>
 
-</html>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="./js/viewTasks.js"></script>
+
 </body>
 
 </html>
