--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,8 @@
   <title>Strive Up!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
   <nav class="navbar navbar-light bg-white">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="./assets/images/Strive Rite.png" alt="Strive Rite Logo"width="150" class="height-auto">
+        <img src="./assets/images/Strive Rite.png" alt="Strive Rite Logo" width="150" class="height-auto">
       </a>
     </div>
   </nav>
@@ -24,7 +25,7 @@
       <div class="col-12 col-sm-12 col-md-9 bg-warning px-5 borderTopExtraLight">
         <img id="signUpLogo" src="./assets/images/Strive Rite.png">
         <h4 class="text-center">responsibility the fun way</h4>
-      
+
         <div class="row bg-light rounded-top borderTopSides">
           <div class="col-12 col-sm-12 col-md-12 text-center">
             <h2>Welcome to strive right!</h2>
@@ -37,10 +38,11 @@
         <div class="col-12 col-sm-12 col-md-12">
           <div class="row bg-light borderSides">
             <div class="col-12 col-sm-12 col-md-12 text-center mb-4">
-              <h4>Please enter your <span><img src="./assets/images/Strive Rite.png" class="height-auto mb-2" width="100"></span> account information</h4>
+              <h4>Please enter your <span><img src="./assets/images/Strive Rite.png" class="height-auto mb-2"
+                    width="100"></span> account information</h4>
             </div>
           </div>
-          
+
           <div class="row bg-light borderSides">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
               <h1>An image goes here</h1>
@@ -65,9 +67,9 @@
                     <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password">
                   </div>
                 </div>
-                <button type="submit" class="btn btn-danger float-end m-5">Sign Up</button>
+                <button type="submit" class="btn btn-danger float-end m-5">Log In</button>
               </form>
-              <p class="mt-5">Don't have an account? <a href="/login">Create an account</a></p>
+              <p class="mt-5">Don't have an account? <a href="/register">Create an account</a></p>
             </div>
           </div>
         </div>
@@ -75,8 +77,11 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
   <script type="text/javascript" src="./js/login.js"></script>
 
 </body>
