Updated dashboard added pic to signup

--- a/public/signup.html
+++ b/public/signup.html
@@ -43,7 +43,7 @@
           
           <div class="row bg-light borderSides">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
-              <h1>An image goes here</h1>
+              <img id="signupPic" src="./assets/images/signuppic.jpg">
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
               <form class="signup">
