Official mvp is done needs some async work. Sometimes pages load before the data is available

--- a/public/productSearch.html
+++ b/public/productSearch.html
@@ -43,7 +43,8 @@
                       Tasks
                     </a>
                     <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="/view_tasks">View Tasks</a></li>
+                      <li><a class="dropdown-item" href="/pending_tasks">View Tasks Awaiting Approval</a></li>
+                      <li><a class="dropdown-item" href="/view_tasks">View Incomplete Tasks</a></li>
                       <li><a class="dropdown-item" href="/new_tasks">Assign New Task</a></li>
                     </ul>
                   </li>
@@ -84,7 +85,7 @@
             <div class="col-12 col-sm-12 col-md-12 px-4">
               <div class="col-12 col-sm-12 col-md-12">
                 <div class="row overflow-scroll" id="markup-container">
-
+                  
                 </div>
               </div>
             </div>
