--- a/public/createTask.html
+++ b/public/createTask.html
@@ -44,7 +44,8 @@
                     Tasks
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/view_tasks">View Tasks</a></li>
+                    <li><a class="dropdown-item" href="/pending_tasks">View Tasks Awaiting Approval</a></li>
+                    <li><a class="dropdown-item" href="/view_tasks">View Incomplete Tasks</a></li>
                     <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
                   </ul>
                 </li>
@@ -88,45 +89,45 @@
                     <br>
                     <h5 class="card-title">Date of Completion* (mm/dd/yyyy)</h5>
                     <div class="input-group">
-                        <input id="date" type="text" aria-label="Completion" class="form-control" style="max-width: 20rem;">
+                        <input id="date" type="date" placeholder="yyyy-mm-dd" aria-label="Completion" class="form-control" style="max-width: 20rem;">
                     </div>
                     <br>
                     <h5 class="card-title">Time of Completion*</h5>
                       <select class="form-select" id="time" aria-label="Time" style="max-width: 20rem;">
                           <option selected>Select time</option>
-                          <option value="0600">6:00 am</option>
-                          <option value="0630">6:30 am</option>
-                          <option value="0700">7:00 am</option>
-                          <option value="0730">7:30 am</option>
-                          <option value="0800">8:00 am</option>
-                          <option value="0830">8:30 am</option>
-                          <option value="0900">9:00 am</option>
-                          <option value="0930">9:30 am</option>
-                          <option value="1000">10:00 am</option>
-                          <option value="1030">10:30 am</option>
-                          <option value="1100">11:00 am</option>
-                          <option value="1130">11:30 am</option>
-                          <option value="1200">12:00 pm</option>
-                          <option value="1230">12:30 pm</option>
-                          <option value="1300">1:00 pm</option>
-                          <option value="1330">1:30 pm</option>
-                          <option value="1400">2:00 pm</option>
-                          <option value="1430">2:30 pm</option>
-                          <option value="1500">3:00 pm</option>
-                          <option value="1530">3:30 pm</option>
-                          <option value="1600">4:00 pm</option>
-                          <option value="1630">4:30 pm</option>
-                          <option value="1700">5:00 pm</option>
-                          <option value="1730">5:30 pm</option>
-                          <option value="1800">6:00 pm</option>
-                          <option value="1830">6:30 pm</option>
-                          <option value="1900">7:00 pm</option>
-                          <option value="1930">7:30 pm</option>
-                          <option value="2000">8:00 pm</option>
-                          <option value="2030">8:30 pm</option>
-                          <option value="2100">9:00 pm</option>
-                          <option value="2130">9:30 pm</option>
-                          <option value="2200">10:00 pm</option>
+                          <option value="06:00:00">6:00 am</option>
+                          <option value="06:30:00">6:30 am</option>
+                          <option value="07:00:00">7:00 am</option>
+                          <option value="07:30:00">7:30 am</option>
+                          <option value="08:00:00">8:00 am</option>
+                          <option value="08:30:00">8:30 am</option>
+                          <option value="09:00:00">9:00 am</option>
+                          <option value="09:30:00">9:30 am</option>
+                          <option value="10:00:00">10:00 am</option>
+                          <option value="10:30:00">10:30 am</option>
+                          <option value="11:00:00">11:00 am</option>
+                          <option value="11:30:00">11:30 am</option>
+                          <option value="12:00:00">12:00 pm</option>
+                          <option value="12:30:00">12:30 pm</option>
+                          <option value="13:00:00">1:00 pm</option>
+                          <option value="13:30:00">1:30 pm</option>
+                          <option value="14:00:00">2:00 pm</option>
+                          <option value="14:30:00">2:30 pm</option>
+                          <option value="15:00:00">3:00 pm</option>
+                          <option value="15:30:00">3:30 pm</option>
+                          <option value="16:00:00">4:00 pm</option>
+                          <option value="16:30:00">4:30 pm</option>
+                          <option value="17:00:00">5:00 pm</option>
+                          <option value="17:30:00">5:30 pm</option>
+                          <option value="18:00:00">6:00 pm</option>
+                          <option value="18:30:00">6:30 pm</option>
+                          <option value="19:00:00">7:00 pm</option>
+                          <option value="19:30:00">7:30 pm</option>
+                          <option value="20:00:00">8:00 pm</option>
+                          <option value="20:30:00">8:30 pm</option>
+                          <option value="21:00:00">9:00 pm</option>
+                          <option value="21:30:00">9:30 pm</option>
+                          <option value="22:00:00">10:00 pm</option>
                         </select>
                     <br>
                     <h5 class="card-title">Point Value of Task*</h5>
@@ -145,10 +146,10 @@
 
                         </select>
                     <br>
-                    <h5 class="card-title">Assigned By*</h5>
-                    <div class="input-group">
-                        <input id="assigned-by" type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;">
-                    </div>
+                    <h5 class="card-title">Assigned To*</h5>
+                    <select id="child" class="form-select" aria-label="Value">
+                      <option selected>Select Child</option>
+                    </select>
                         
                 </div>
                 <br>
@@ -177,7 +178,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   
-<script type="text/javascript" src="./js/signup.js"></script>
+<script type="text/javascript" src="./js/createTask.js"></script>
 
 </body>
 
