--- a/public/login.html
+++ b/public/login.html
@@ -53,10 +53,10 @@
                 </div>
                 <div class="row g-3 align-items-center">
                   <div class="col-3 text-end">
-                    <label for="inputEmail" class="col-form-label">Email Address</label>
+                    <label for="inputEmail" class="col-form-label">Email or Username</label>
                   </div>
                   <div class="col-9">
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Enter your email address">
+                    <input type="email or username" id="inputEmail" class="form-control" placeholder="Enter your email or username">
                   </div>
                 </div>
                 <div class="row g-3 align-items-center">
