--- a/public/signup.html
+++ b/public/signup.html
@@ -65,6 +65,7 @@
                   <div class="col-9">
                     <input type="email" name="email" id="inputEmail" class="form-control"
                       placeholder="Enter your email address">
+                    <div id="isValid"></div>
                   </div>
                 </div>
                 <div class="row g-3 align-items-center">
