--- a/public/createTask.html
+++ b/public/createTask.html
@@ -37,25 +37,25 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
+                  <a class="nav-link" aria-current="page" href="/dashboard">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Tasks
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/pending_tasks">View Tasks Awaiting Approval</a></li>
-                    <li><a class="dropdown-item" href="/view_tasks">View Incomplete Tasks</a></li>
                     <li><a class="dropdown-item" href="/new_task">Assign New Task</a></li>
+                    <li><a class="dropdown-item" href="/view_tasks">Tasks Awaiting Completion</a></li>
+                    <li><a class="dropdown-item" href="/pending_tasks">Tasks Awaiting Confirmation</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Prizes
                   </a>
                   <ul class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/search_rewards">Search Rewards</a></li>
-                    <li><a class="dropdown-item" href="/view_rewards">View Saved Rewards</a></li>
+                    <li><a class="dropdown-item" href="/search_rewards">Search for Rewards</a></li>
+                    <li><a class="dropdown-item" href="/view_rewards">Saved Rewards</a></li>
                   </ul>
                 </li>
               </ul>
