fixed a few details like notifying when there was a login or signup error

--- a/public/login.html
+++ b/public/login.html
@@ -67,6 +67,7 @@
                     <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password">
                   </div>
                 </div>
+                <div id="error-message" class="row mt-2 ms-5 g-3 align-items-center text-danger"></div>
                 <button type="submit" class="btn btn-danger float-end m-5">Log In</button>
               </form>
               <p class="mt-5">Don't have an account? <a href="/register">Create an account</a></p>
