--- a/public/productSearch.html
+++ b/public/productSearch.html
@@ -73,7 +73,7 @@
                     <h5>Search Amazon for Prizes!</h5>
                 </div>
                 <div class="col-10 col-sm-auto mb-1">
-                  <input type="search" id="inputSearch" class="form-control" placeholder="Search">
+                  <input type="search" id="inputSearch" class="form-control" placeholder="Search" autocomplete="off">
                 </div>
                 <button type="button" id="search" class="btn btn-danger col-auto mb-1">
                     <i class="fas fa-search"></i>
