--- a/public/signup.html
+++ b/public/signup.html
@@ -145,6 +145,7 @@
                       placeholder="Enter your password">
                   </div>
                 </div>
+                <div id="error-message" class="row mt-2 ms-5 g-3 align-items-center text-danger"></div>
                 <button type="submit" class="btn btn-danger float-end m-5">Register</button>
               </form>
               <p class="mt-5">Already have an account? <a href="/login">Log In</a></p>
