--- a/public/createTask.html
+++ b/public/createTask.html
@@ -71,102 +71,108 @@
             <div class="col-12 col-sm-12 col-md-12 mt-4">
               <h5>Create a Task</h5>
             </div>
-            <p>You may add up to ten tasks per child.</p>
           </div>
-      <div class="row bg-white borderSides">
-        <div class="card mt-3 border-primary mb-3 roundedImportant cardStyle" Style="max-width: 35rem">
-            <div class="card-header d-flex rounded-top text-white">Create a Task</div>
-                <div class="card-body text-white">
-                    <h5 class="card-title">Task Title*</h5>
-                    <div class="input-group">
-                        <input id="task-title" type="text" aria-label="Task Title" class="form-control">
-                    </div>
-                    <br>
-                    <h5 class="card-title">Task Description*</h5>
-                    <div class="input-group">
-                        <input id="task-description" type="text" aria-label="Task Description" class="form-control">
-                    </div>
-                    <br>
-                    <h5 class="card-title">Date of Completion* (mm/dd/yyyy)</h5>
-                    <div class="input-group">
-                        <input id="date" type="date" placeholder="yyyy-mm-dd" aria-label="Completion" class="form-control" style="max-width: 20rem;">
-                    </div>
-                    <br>
-                    <h5 class="card-title">Time of Completion*</h5>
-                      <select class="form-select" id="time" aria-label="Time" style="max-width: 20rem;">
-                          <option selected>Select time</option>
-                          <option value="06:00:00">6:00 am</option>
-                          <option value="06:30:00">6:30 am</option>
-                          <option value="07:00:00">7:00 am</option>
-                          <option value="07:30:00">7:30 am</option>
-                          <option value="08:00:00">8:00 am</option>
-                          <option value="08:30:00">8:30 am</option>
-                          <option value="09:00:00">9:00 am</option>
-                          <option value="09:30:00">9:30 am</option>
-                          <option value="10:00:00">10:00 am</option>
-                          <option value="10:30:00">10:30 am</option>
-                          <option value="11:00:00">11:00 am</option>
-                          <option value="11:30:00">11:30 am</option>
-                          <option value="12:00:00">12:00 pm</option>
-                          <option value="12:30:00">12:30 pm</option>
-                          <option value="13:00:00">1:00 pm</option>
-                          <option value="13:30:00">1:30 pm</option>
-                          <option value="14:00:00">2:00 pm</option>
-                          <option value="14:30:00">2:30 pm</option>
-                          <option value="15:00:00">3:00 pm</option>
-                          <option value="15:30:00">3:30 pm</option>
-                          <option value="16:00:00">4:00 pm</option>
-                          <option value="16:30:00">4:30 pm</option>
-                          <option value="17:00:00">5:00 pm</option>
-                          <option value="17:30:00">5:30 pm</option>
-                          <option value="18:00:00">6:00 pm</option>
-                          <option value="18:30:00">6:30 pm</option>
-                          <option value="19:00:00">7:00 pm</option>
-                          <option value="19:30:00">7:30 pm</option>
-                          <option value="20:00:00">8:00 pm</option>
-                          <option value="20:30:00">8:30 pm</option>
-                          <option value="21:00:00">9:00 pm</option>
-                          <option value="21:30:00">9:30 pm</option>
-                          <option value="22:00:00">10:00 pm</option>
-                        </select>
-                    <br>
-                    <h5 class="card-title">Point Value of Task*</h5>
-                    <div class="input-group">
-                            <input id="points" type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;">
-                    </div>
-
-                    <br>
-                    <h5 class="card-title">Task Priority*</h5>
-                      <select id="priority" class="form-select" aria-label="Value">
-
-                          <option selected>Select Priority Level</option>
-                          <option value="1">Low</option>
-                          <option value="2">Medium</option>
-                          <option value="3">High</option>
-
-                        </select>
-                    <br>
-                    <h5 class="card-title">Assigned To*</h5>
-                    <select id="child" class="form-select" aria-label="Value">
-                      <option selected>Select Child</option>
-                    </select>
-                        
+      <div class="row bg-white borderSides" style="border-bottom: 5px solid gold;">
+        <div id="childrenContainer" class="col-12 col-sm-12 col-md-12 col-lg-8">
+          <div class="row mx-1 mt-2 p-1 bg-primary rounded-top black-border-top black-border-left black-border-right">
+            <div class="col-12 col-sm-12 col-md-12">
+              <h4 class="text-white">Task Details</h4>
+            </div>
+          </div>
+          <div class="row mx-1 p-1 info-divs black-border-left black-border-right rounded-bottom black-border-bottom mb-2">
+            <div class="col-12 col-sm-12 col-md-12">
+              <div class="card-body text-dark">
+                <h5 class="card-title">Task Title*</h5>
+                <div class="input-group">
+                    <input id="task-title" type="text" aria-label="Task Title" class="form-control">
                 </div>
                 <br>
-                <div class="d-grid d-md-flex justify-content-md-end">
+                <h5 class="card-title">Task Description*</h5>
+                <div class="input-group">
+                    <input id="task-description" type="text" aria-label="Task Description" class="form-control">
+                </div>
+                <br>
+                <h5 class="card-title">Date of Completion* (mm/dd/yyyy)</h5>
+                <div class="input-group">
+                    <input id="date" type="date" placeholder="yyyy-mm-dd" aria-label="Completion" class="form-control" style="max-width: 20rem;">
+                </div>
+                <br>
+                <h5 class="card-title">Time of Completion*</h5>
+                  <select class="form-select" id="time" aria-label="Time" style="max-width: 20rem;">
+                      <option selected>Select time</option>
+                      <option value="06:00:00">6:00 am</option>
+                      <option value="06:30:00">6:30 am</option>
+                      <option value="07:00:00">7:00 am</option>
+                      <option value="07:30:00">7:30 am</option>
+                      <option value="08:00:00">8:00 am</option>
+                      <option value="08:30:00">8:30 am</option>
+                      <option value="09:00:00">9:00 am</option>
+                      <option value="09:30:00">9:30 am</option>
+                      <option value="10:00:00">10:00 am</option>
+                      <option value="10:30:00">10:30 am</option>
+                      <option value="11:00:00">11:00 am</option>
+                      <option value="11:30:00">11:30 am</option>
+                      <option value="12:00:00">12:00 pm</option>
+                      <option value="12:30:00">12:30 pm</option>
+                      <option value="13:00:00">1:00 pm</option>
+                      <option value="13:30:00">1:30 pm</option>
+                      <option value="14:00:00">2:00 pm</option>
+                      <option value="14:30:00">2:30 pm</option>
+                      <option value="15:00:00">3:00 pm</option>
+                      <option value="15:30:00">3:30 pm</option>
+                      <option value="16:00:00">4:00 pm</option>
+                      <option value="16:30:00">4:30 pm</option>
+                      <option value="17:00:00">5:00 pm</option>
+                      <option value="17:30:00">5:30 pm</option>
+                      <option value="18:00:00">6:00 pm</option>
+                      <option value="18:30:00">6:30 pm</option>
+                      <option value="19:00:00">7:00 pm</option>
+                      <option value="19:30:00">7:30 pm</option>
+                      <option value="20:00:00">8:00 pm</option>
+                      <option value="20:30:00">8:30 pm</option>
+                      <option value="21:00:00">9:00 pm</option>
+                      <option value="21:30:00">9:30 pm</option>
+                      <option value="22:00:00">10:00 pm</option>
+                    </select>
+                <br>
+                <h5 class="card-title">Point Value of Task*</h5>
+                <div class="input-group">
+                        <input placeholder="Enter the number of points" id="points" type="text" aria-label="Value of Task" class="form-control" style="max-width: 20rem;">
+                </div>
 
-                    <button type="submit" id="btnSave" class="btn btn-danger">SAVE</button>
+                <br>
+                <h5 class="card-title">Task Priority*</h5>
+                  <select id="priority" class="form-select" aria-label="Value">
 
-                </div>  
-                <br> 
+                      <option selected>Select Priority Level</option>
+                      <option value="1">Low</option>
+                      <option value="2">Medium</option>
+                      <option value="3">High</option>
 
+                    </select>
+                <br>
+                <h5 class="card-title">Assigned To*</h5>
+                <select id="child" class="form-select" aria-label="Value">
+                  <option selected>Select Child</option>
+                </select>
+                    
+            </div>
+            <br>
+            <div class="d-grid d-md-flex justify-content-md-end">
+
+                <button type="submit" id="btnSave" class="btn btn-danger">SAVE</button>
+
+            </div>  
+            <br> 
+            </div>
+          </div>
         </div>
-        <div class="card mt-3 mb-3" id="picCard" Style="max-width: 20rem">
+        <div class="card mb-3 col-lg-4" id="picCard" Style="max-width: 20rem">
           <div class="overflow-hidden">
-        <img src="assets/images/Trash Bag.png" class="rounded" alt="Boy trash bag" id="trashPic">
-        <img src="assets/images/Dusting.png" class="rounded" alt="girl dusting" id="dustingPic">
-      </div>
-      </div>
+            <img src="assets/images/Trash Bag.png" class="rounded" alt="Boy trash bag" id="trashPic">
+            <img src="assets/images/Dusting.png" class="rounded" alt="girl dusting" id="dustingPic">
+          </div>
+        </div>
       </div>
     </div>
           <div class="text-center my-1 col-12 col-sm-12 col-md-12">Terms & Conditions | Privacy Policy | Support</div>
