added some text to confirm that the task was added

--- a/public/createTask.html
+++ b/public/createTask.html
@@ -159,11 +159,10 @@
             </div>
             <br>
             <div class="d-grid d-md-flex justify-content-md-end">
-
                 <button type="submit" id="btnSave" class="btn btn-danger">SAVE</button>
-
-            </div>  
+            </div>
             <br> 
+            <div id="success-div"></div>
             </div>
           </div>
         </div>
